Fixed filter kernel visualization spacing issues

--- a/src/style.css
+++ b/src/style.css
@@ -22,8 +22,13 @@ input#load-image-upload {
 
 #kernel-vis * .block {
       margin: 0% 1%;
+      padding: 0;
 }
 
 #kernel-vis * {
       display: inline-block;
 }
+
+/* #kernel-vis p {
+      transform: scale(0.5)
+} */
